<resources>
    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title">Title</string>
    <string name="due_date">Due date</string>
    <string name="note">Note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="reminder_text">Remind me 1 hour before due time</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="date_created">Date Created</string>

    <string-array name="option_edit_delete">
        <item>Details</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>

