<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/CustomMaterialTheme">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/due_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:longClickable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:longClickable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/input_remind_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_text"
            android:textColor="@color/colorGray"
            android:checked="true"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>